--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "displayName": "biblia_nvi",
     "dependencies": {
         "cordova-android": "^7.1.4",
-        "cordova-plugin-splashscreen": "^5.0.3",
-        "cordova-plugin-statusbar": "~2.1.3",
-        "phonegap-plugin-push": "~1.8.0",
         "cordova-plugin-console": "~1.0.3",
         "cordova-plugin-dialogs": "~1.2.1",
-        "cordova-plugin-whitelist": "~1.2.1"
+        "cordova-plugin-splashscreen": "^5.0.3",
+        "cordova-plugin-statusbar": "~2.1.3",
+        "cordova-plugin-whitelist": "~1.2.1",
+        "phonegap-plugin-push": "~1.8.0"
     },
     "cordova": {
         "plugins": {
