--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cordova-admob-sdk": "0.24.1",
     "cordova-android": "^7.1.4",
+    "cordova-clipboard": "^1.3.0",
     "cordova-plugin-admob-free": "^0.27.0",
     "cordova-plugin-console": "~1.0.3",
     "cordova-plugin-dialogs": "~1.2.1",
@@ -37,7 +38,8 @@
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-clipboard": {}
     },
     "platforms": [
       "android"
