--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
       "cordova-plugin-admob-free": {
         "ADMOB_APP_ID": "ca-app-pub-7091486462236476~4004927104"
       },
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      },
+      "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-splashscreen": {},
       "cordova-clipboard": {},
       "cordova-plugin-insomnia": {}
