--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "~2.1.3",
     "cordova-plugin-whitelist": "~1.2.1",
+    "cordova-plugin-x-socialsharing": "^6.0.0",
     "cordova-promise-polyfill": "0.0.2",
     "cordova-support-google-services": "^1.1.0",
+    "es6-promise-plugin": "^4.2.2",
     "phonegap-plugin-multidex": "^1.0.0",
     "phonegap-plugin-push": "^2.2.3"
   },
@@ -36,7 +38,8 @@
       },
       "cordova-plugin-splashscreen": {},
       "cordova-clipboard": {},
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "android"
