--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -18,3 +18,4 @@ cordova.system.library.2=me.leolin:ShortcutBadger:1.1.17@aar
 cordova.system.library.3=com.google.firebase:firebase-messaging:11.6.2
 cordova.system.library.4=com.google.android.gms:play-services-base:11.0.4
 cordova.system.library.5=com.google.android.gms:play-services-ads:11.0.4
+cordova.system.library.6=androidx.legacy:legacy-support-v4:1.0.0
