--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "~2.1.3",
     "cordova-plugin-whitelist": "~1.2.1",
-    "cordova-plugin-x-socialsharing": "^6.0.0",
+    "cordova-plugin-x-socialsharing": "5.6.7",
     "cordova-promise-polyfill": "0.0.2",
     "cordova-support-google-services": "^1.1.0",
     "es6-promise-plugin": "^4.2.2",
