--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cordova-promise-polyfill": "0.0.2",
     "cordova-support-google-services": "^1.1.0",
     "es6-promise-plugin": "^4.2.2",
+    "onesignal-cordova-plugin": "2.11.1",
     "phonegap-plugin-multidex": "^1.0.0",
     "phonegap-plugin-push": "^2.2.3"
   },
@@ -39,7 +40,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-clipboard": {},
       "cordova-plugin-insomnia": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
