--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -16,3 +16,5 @@ cordova.system.library.2=com.google.android.gms:play-services-ads:11.0.4
 cordova.system.library.3=androidx.legacy:legacy-support-v4:1.0.0
 cordova.gradle.include.1=cordova-support-google-services/teindico-build.gradle
 cordova.gradle.include.2=phonegap-plugin-multidex/teindico-multidex.gradle
+cordova.system.library.4=com.onesignal:OneSignal:3.15.3
+cordova.gradle.include.3=onesignal-cordova-plugin/teindico-build-extras-onesignal.gradle
